charts/argo/argo-cd/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ui
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`argocd.chonk.city`)
      priority: 10
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argocd-transport
      middlewares:
        - name: rate-limit
          namespace: traefik
        - name: https-redirectscheme
          namespace: traefik
        - name: default-headers
          namespace: traefik
        - name: compress
          namespace: traefik
    - kind: Rule
      match: Host(`argocd.chonk.city`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 443
          scheme: h2c
          serversTransport: argocd-transport
  tls:
    secretName: chonk-city-tls
